--- a/open_trails/templates/index.html
+++ b/open_trails/templates/index.html
@@ -3,7 +3,7 @@
 <title>Upload new File</title>
 <body>
 <h1>Upload new File</h1>
-<form action="" method=post enctype=multipart/form-data>
+<form action="/map" method=post enctype=multipart/form-data>
   <p><input type=file name=file>
      <input type=submit value=Upload>
 </form>
