Uploads to s3. WIP

--- a/open_trails/templates/index.html
+++ b/open_trails/templates/index.html
@@ -3,9 +3,9 @@
 <title>Upload new File</title>
 <body>
 <h1>Upload new File</h1>
-<form action="/map" method=post enctype=multipart/form-data>
-  <p><input type=file name=file>
-     <input type=submit value=Upload>
+<form action="/upload" method=post enctype=multipart/form-data>
+  <p><input type=text name=org-name><input type=file name=file>
+     <input type=submit value=Upload></p>
 </form>
 </body>
 </html>
