First version of a frontend

--- a/open_trails/templates/index.html
+++ b/open_trails/templates/index.html
@@ -1,11 +1,141 @@
-<!doctype html>
-<html>
-<title>Upload new File</title>
+<!DOCTYPE html>
+<html lang="en-us">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Code for America</title>
+
+ 	<!-- LEAFLET -->
+
+    <!-- CODE FOR AMERICA STYLES -->
+    <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6435252/678502/css/fonts.css" />
+    <link rel="stylesheet" href="http://style.codeforamerica.org/0/style/css/main.css">
+    <link rel="stylesheet" href="http://style.codeforamerica.org/0/style/css/layout.css" media="all and (min-width: 40em)">
+    <link href="http://style.codeforamerica.org/0/style/css/prism.css" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="http://style.codeforamerica.org/0/style/favicons/60x60/flag-red.png"/>
+
+    <!--[if lt IE 9]>
+        <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!--[if (lt IE 9)&(gt IE 6)&(!IEMobile)]>
+        <link rel="stylesheet" href="http://style.codeforamerica.org/0/style/css/layout.css" media="all">
+    <![endif]-->
+
+	<!-- CUSTOM STYLES -->
+	<link rel="stylesheet" href="../static/css/app.css" />
+</head>
+
+<!-- Remove this inline style -->
 <body>
-<h1>Upload new File</h1>
-<form action="/map" method=post enctype=multipart/form-data>
-  <p><input type=file name=file>
-     <input type=submit value=Upload>
-</form>
+
+	<section class="layout-semibreve layout-centered">
+
+	        <h3 class="h3">Parks and trails are a cornerstone of public health and quality of life. The Public Land and Trail Specification helps citizens get outdoors to enjoy them.</h3>
+
+	</section>
+
+	<section class="layout-semibreve slab-gray" id="steward-form">
+		<form id="steward" action="" method=post>
+			<h3 class="h3">Create your Organization Profile</h3>
+			<p>Tell us about your organization. This information helps data consumers understand where this data came from, and who to get in touch with if needed. This same information is used by visitors who may need assistance while visiting your lands or trails.</p>
+			<div class="layout-minim">
+				<!-- Steward name -->
+				<p>
+					<label for="name">Organization Name<abbr title="Required">*</abbr></label>
+					<input id="name" class="input" type="name" required/>
+				</p>
+				<!-- Steward email -->
+				<p>
+					<label for="email">Contact E-mail<abbr title="Required">*</abbr></label>
+					<input id="email" class="input" type="email" placeholder="you@example.gov" required/>
+				</p>
+			</div>
+			<div class="layout-minim">
+				<!-- Steward phone -->
+				<p>
+					<label for="phone">Contact Phone <abbr title="Required">*</abbr></label>
+					<input id="phone" class="input" type="phone" placeholder="555-555-5555" required/>
+				</p>
+				<!-- Steward url -->
+				<p>
+					<label for="url">Web Address <abbr title="Required">*</abbr></label>
+					<input id="url" class="input" type="url" placeholder="http://example.com" required/>
+				</p>
+			</div>
+
+			<div class="layout-minim">
+			</div>
+			<p class="submit-button-row">
+				<input type=submit value=Upload id="steward-form-submit-btn">
+			</p>
+		</form>
+	</section>
+
+	<section class="layout-semibreve">
+		<h3 class="h3">Upload your trail segment data</h3>
+		<p>Tell us about your organization. This information helps data consumers understand where this data came from, and who to get in touch with if needed. This same information is used by visitors who may need assistance while visiting your lands or trails.</p>
+        <form action="" method=post enctype=multipart/form-data>
+			<p>
+				<label for="combined">Contextual Information goes here</label>
+				<input type=file name=file>
+				<input type=submit value=Upload>
+			</p>
+        </form>
+	</section>
+
+	<section class="layout-semibreve">
+
+		<h3 class="h3">Upload your trailhead data</h3>
+		<p>Tell us about your organization. This information helps data consumers understand where this data came from, and who to get in touch with if needed. This same information is used by visitors who may need assistance while visiting your lands or trails.</p>
+	        <form action="" method=post enctype=multipart/form-data>
+				<p>
+					<label for="combined">Contextual Information goes here</label>
+					<span class="combined">
+						<input type=file name=trailheads>
+						<input type=submit value=Upload>
+					</span>
+				</p>
+	        </form>
+	</section>
+
+	<section class="layout-semibreve">
+
+		<h3 class="h3">Upload your area data (boundaries)</h3>
+		<p>Tell us about your organization. This information helps data consumers understand where this data came from, and who to get in touch with if needed. This same information is used by visitors who may need assistance while visiting your lands or trails.</p>
+	        <form action="" method=post enctype=multipart/form-data>
+				<p>
+					<label for="combined">Contextual Information goes here</label>
+					<span class="combined">
+						<input type=file name=areas>
+						<input type=submit value=Upload>
+					</span>
+				</p>
+	        </form>
+	</section>
 </body>
+<!--  Scripts to be moved into seperate files later -->
+
+
+el.style.display = 'none';
+<script>
+
+window.addEventListener("DOMContentLoaded", function () {
+	console.log("onload event fired")
+
+	var stewardFormSubmitBtn = document.getElementById("steward-form-submit-btn")
+
+	//  Event Listeners
+	stewardFormSubmitBtn.addEventListener("click", function(stewardForm) {
+		console.log("submit-btn clicked")
+		stewardForm = document.getElementById("steward-form");
+		fields = document.getElementsByClassName("input");
+		console.log(fields)
+		fields.style.display = 'none';
+	});
+});
+
+</script>
 </html>
