Added a beautiful favicon

--- a/open_trails/templates/index.html
+++ b/open_trails/templates/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="http://style.codeforamerica.org/0/style/css/main.css">
     <link rel="stylesheet" href="http://style.codeforamerica.org/0/style/css/layout.css" media="all and (min-width: 40em)">
     <link href="http://style.codeforamerica.org/0/style/css/prism.css" rel="stylesheet" />
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="apple-touch-icon-precomposed" href="http://style.codeforamerica.org/0/style/favicons/60x60/flag-red.png"/>
 
     <!--[if lt IE 9]>
