--- a/open_trails/templates/stewards_list.html
+++ b/open_trails/templates/stewards_list.html
@@ -32,8 +32,8 @@
 <body>
     <section class="layout-semibreve layout-centered">
 
-        {% for org in orgs_list %}
-            <p><a href="http://localhost:5000/{{org}}">http://localhost:5000/{{org}}</a></p>
+        {% for steward in stewards_list %}
+            <p><a href="http://localhost:5000/stewards/{{steward}}">http://localhost:5000/stewards/{{steward}}</a></p>
         {% endfor %}
 
     </section>
