Fixed typo in stewards list template

--- a/open_trails/templates/stewards_list.html
+++ b/open_trails/templates/stewards_list.html
@@ -33,7 +33,7 @@
     <section class="layout-semibreve layout-centered">
 
         {% for steward in stewards_list %}
-            <p><a href="{{server_url}}/stewards/{{steward}}">{{server_url}}/stewards/{{steward}}</a></p>
+            <p><a href="{{server_url}}stewards/{{steward}}">{{server_url}}stewards/{{steward}}</a></p>
         {% endfor %}
 
     </section>
