Use stewardid instead of steward name on upload forms.

--- a/open_trails/templates/index.html
+++ b/open_trails/templates/index.html
@@ -94,7 +94,7 @@
         <section class="layout-semibreve">
             <h3 class="h3">Upload your trail data!!!!</h3>
             <p>Give it all to us!</p>
-            <form action="/stewards/{{ stewards_info.name }}/upload-zip" method=post enctype=multipart/form-data>
+            <form action="/stewards/{{ stewards_info.id }}/upload-zip" method=post enctype=multipart/form-data>
                 <p>
                     <input type=file name=file>
                  <input type=submit value=Upload>
