Show trail segments.

--- a/open_trails/templates/index.html
+++ b/open_trails/templates/index.html
@@ -105,6 +105,7 @@
 
         {% if geojson %}
         <section class="layout-semibreve">
+            <h3>Segments</h3>
             <div id="map"></div>
         </section>
         <script>
